refactor layout and content; adjust team section styles, update headings, and improve structure for better readability

--- a/jadwal.html
+++ b/jadwal.html
@@ -54,7 +54,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="/">
             <!-- <img src="images/logo2.png" style="width: 150px" alt="" /> -->
-            <span>BASKET PUTRA</span><span style="color: #ff6f00;">.</span>
+            <span>BASKET PUTRA</span><span style="color: #ff6f00">.</span>
           </a>
           <button
             class="navbar-toggler"
@@ -102,79 +102,48 @@
     <section class="team_section layout_padding">
       <div class="container">
         <div class="heading_container">
-          <h2 class="text-center">JADWAL <span style="color: #ff6f00;">LATIHAN</span></h2>
+          <h2 class="text-center">
+            JADWAL <span style="color: #ff6f00">LATIHAN</span>
+          </h2>
         </div>
         <div
           class="team-container"
-          style="margin-top: 50px; border: 1px solid #33333374; padding: 20px"
+          style="margin-top: 50px; border: 1px solid #1e88e5; padding: 20px"
         >
-          <!-- <h4>
-            <span style="color: #d92629; font-weight: bold">Team Merah</span> |
-            Fasilitator Herman
-          </h4> -->
+          <h4>
+            <span style="font-weight: bold">Program Latihan Perdana</span>
+            | Minggu , 16 Februari 2025
+          </h4>
           <div class="row">
-            <div class="col-md-6 col-lg-4 mb-4">
-              <div class="box" style="margin-top: 0; height: 100%">
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
                 <div class="detail-box">
-                  <h5 class="font-weight-bold">Belanja 1</h5>
+                  <h6 class="font-weight-bold">Perkenalan</h6>
                   <ul style="padding-left: 0">
-                    <li>1 dada ayam utuh</li>
-                    <li>300 gr daging ikan bandeng goreng</li>
-                    <li>2 batang sereh</li>
-                    <li>3 lembar daun salam</li>
-                    <li>2 ruas lengkuas</li>
-                    <li>
-                      5 buah pepaya muda ukuran kecil (potong & cuci bersih)
-                    </li>
-                    <li>2 lembar daun jeruk</li>
-                    <li>2 lembar daun salam</li>
-                    <li>1 sashet terasi</li>
-                    <li>2 pc santan karab</li>
+                    <li>Perkenalan Official</li>
+                    <li>Perkenalan Tim Putra dan Tim Putri</li>
                   </ul>
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4">
-              <div class="box" style="margin-top: 0; height: 100%">
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
                 <div class="detail-box">
-                  <h5 class="font-weight-bold">Belanja 2</h5>
+                  <h6 class="font-weight-bold">Mini Game</h6>
                   <ul style="padding-left: 0">
-                    <li>5 buah Tahu Cokelat</li>
-                    <li>2 buah Tahu Putih</li>
-                    <li>10 buah Buncis</li>
-                    <li>7 siung Bawang Merah</li>
-                    <li>4 siung Bawang Putih</li>
-                    <li>10 lembar daun jeruk</li>
-                    <li>12 buah bawang merah</li>
-                    <li>5 buah bawang putih</li>
-                    <li>1 sdt ketumbar</li>
-                    <li>6 buah kemiri</li>
-                    <li>2 ruas kunyit</li>
-                    <li>1 ruas lengkuas</li>
-                    <li>10 buah cabe merah</li>
-                    <li>5 buah cabe keriting</li>
+                    <li>Stretching dan Warming Up</li>
+                    <li>Tes Teknik</li>
+                    <li>Tes Fisik Dan Mental</li>
                   </ul>
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4">
-              <div class="box" style="margin-top: 0; height: 100%">
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
                 <div class="detail-box">
-                  <h5 class="font-weight-bold">Belanja 3</h5>
+                  <h6 class="font-weight-bold">Proyeksi</h6>
                   <ul style="padding-left: 0">
-                    <li>2 buah tahu jumbo</li>
-                    <li>1 papan tempe</li>
-                    <li>200 gr udang</li>
-                    <li>5 buah Cabe Keriting Hijau</li>
-                    <li>2 lembar Daun Salam</li>
-                    <li>2 cm Lengkuas, memarkan</li>
-                    <li>65 ml Santan Instan</li>
-                    <li>9 bawang merah</li>
-                    <li>7 bawang putih</li>
-                    <li>5 butir kemiri</li>
-                    <li>1 jempol kunyit</li>
-                    <li>2 ruas jahe</li>
-                    <li>1 sdt ketumbar</li>
+                    <li>Role Play 12345</li>
                   </ul>
                 </div>
               </div>
