--- a/team.html
+++ b/team.html
@@ -98,7 +98,7 @@
       </header>
     </div>
 
-    <section class="team_section layout_padding">
+    <!-- <section class="team_section layout_padding">
       <div class="container">
         <div class="heading_container">
           <h2 class="text-center">PROFIL <span style="color: #ff6f00;">TEAM</span></h2>
@@ -306,7 +306,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- footer section -->
     <footer class="footer_section">
