refactor styles and structure; update heading alignment, adjust padding, and clean up commented sections for improved layout

--- a/kodiute.html
+++ b/kodiute.html
@@ -102,10 +102,12 @@
     <section class="client_section layout_padding">
       <div class="container">
         <div class="heading_container">
-          <h2><span style="color: #ff6f00">KODIUTE</span> BASKET</h2>
+          <h2 class="text-center">
+            <span style="color: #ff6f00">KODIUTE</span> BASKET
+          </h2>
         </div>
 
-        <div class="about_section layout_padding long_section">
+        <!-- <div class="about_section layout_padding long_section">
           <div class="container">
             <div class="row">
               <div class="col-md-6">
@@ -131,7 +133,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
