--- a/pelatih.html
+++ b/pelatih.html
@@ -103,7 +103,9 @@
     <section class="client_section layout_padding">
       <div class="container">
         <div class="heading_container">
-          <h2>PROFIL <span style="color: #ff6f00">PELATIH</span></h2>
+          <h2 class="text-center">
+            PROFIL <span style="color: #ff6f00">PELATIH</span>
+          </h2>
         </div>
         <div
           id="carousel-data"
