--- a/saluran.html
+++ b/saluran.html
@@ -54,7 +54,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="/">
             <!-- <img src="images/logo2.png" style="width: 150px" alt="" /> -->
-            <span>BASKET PUTRA</span><span style="color: #ff6f00;">.</span>
+            <span>BASKET PUTRA</span><span style="color: #ff6f00">.</span>
           </a>
           <button
             class="navbar-toggler"
@@ -102,10 +102,12 @@
     <section class="client_section layout_padding">
       <div class="container">
         <div class="heading_container">
-          <h2>SALURAN <span style="color: #ff6f00">BASKET</span> PUTRA</h2>
+          <h2 class="text-center">
+            SALURAN <span style="color: #ff6f00">BASKET</span> PUTRA
+          </h2>
         </div>
 
-        <div class="about_section layout_padding long_section">
+        <!-- <div class="about_section layout_padding long_section">
           <div class="container">
             <div class="row">
               <div class="col-md-6">
@@ -120,18 +122,14 @@
               <div class="col-md-6">
                 <div class="detail-box">
                   <p>Bergabung ke saluran Roda Link melalui Whatsapp</p>
-                  <a
-                    href="https://whatsapp.com/channel/0029Vb5wTUU9hXFEFrNsDo23"
-                    class="btn1"
-                    target="_blank"
-                  >
+                  <a href="" class="btn1" target="_blank">
                     <i class="fa fa-whatsapp"></i> Gabung
                   </a>
                 </div>
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
