--- a/team.html
+++ b/team.html
@@ -98,12 +98,14 @@
       </header>
     </div>
 
-    <!-- <section class="team_section layout_padding">
+    <section class="team_section layout_padding">
       <div class="container">
         <div class="heading_container">
-          <h2 class="text-center">PROFIL <span style="color: #ff6f00;">TEAM</span></h2>
+          <h2 class="text-center">
+            PROFIL <span style="color: #ff6f00">TEAM</span>
+          </h2>
         </div>
-        <div
+        <!-- <div
           class="team-container"
           style="margin-top: 50px; border: 1px solid #d92629; padding: 20px"
         >
@@ -169,144 +171,9 @@
               </div>
             </div>
           </div>
-        </div>
-        <div
-          class="team-container"
-          style="margin-top: 50px; border: 1px solid #d9ca26; padding: 20px"
-        >
-          <h4>
-            <span style="color: #d9ca26; font-weight: bold">Team Kuning</span> |
-            Fasilitator Guntoro
-          </h4>
-          <div class="row">
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-              <div class="box w-100">
-                <div class="detail-box">
-                  <h5 class="font-weight-bold">Tim 4 : Regional Adit 1</h5>
-                  <ul style="padding-left: 0">
-                    <li>Aditya Septian</li>
-                    <li>Syarif Hidayatullah</li>
-                    <li>Andri Purba</li>
-                    <li>Kadek Arya</li>
-                    <li>Christian Hadinata</li>
-                    <li>Febrioka Mawahibul Riza</li>
-                    <li>Rinto Gus Panoraga</li>
-                    <li>Sri Wahyudi</li>
-                    <li>R. Kevin Adrian Danudoro</li>
-                    <li>Sugeng Santoso</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-              <div class="box w-100">
-                <div class="detail-box">
-                  <h5 class="font-weight-bold">Tim 5 : Regional Adit 2</h5>
-                  <ul style="padding-left: 0">
-                    <li>Irfan Maulana</li>
-                    <li>Sugiharto</li>
-                    <li>Bayu Aria Wardana</li>
-                    <li>Machdi Rochmad T.W</li>
-                    <li>Muhamad Arifin</li>
-                    <li>Fendy Evendy Putra</li>
-                    <li>M. Choiril Huda</li>
-                    <li>Kurniyanto</li>
-                    <li>Ghali Pranandika</li>
-                    <li>Dodiastyo Hutomo</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-              <div class="box w-100">
-                <div class="detail-box">
-                  <h5 class="font-weight-bold">Tim 6 : HQ</h5>
-                  <ul style="padding-left: 0">
-                    <li>Juliana Kurniawan</li>
-                    <li>Arief Darmawan</li>
-                    <li>Shafa Abid Ihtisan</li>
-                    <li>Samuel Adam</li>
-                    <li>Rina Mutia</li>
-                    <li>Jimmy Indra</li>
-                    <li>Permata Nirwana R</li>
-                    <li>Claudia Ressy</li>
-                    <li>M. Rizqi</li>
-                    <li>Yusuf Dwi Meirianto</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div
-          class="team-container"
-          style="margin-top: 50px; border: 1px solid #41d926; padding: 20px"
-        >
-          <h4>
-            <span style="color: #41d926; font-weight: bold">Team Hijau</span> |
-            Fasilitator Robby
-          </h4>
-          <div class="row">
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-              <div class="box w-100">
-                <div class="detail-box">
-                  <h5 class="font-weight-bold">Tim 7 : Regional Mario 1</h5>
-                  <ul style="padding-left: 0">
-                    <li>Mario Wahyu Slamet</li>
-                    <li>Ici Nurdin</li>
-                    <li>Ryan Afriansyah</li>
-                    <li>Qudratulah Alamsyah</li>
-                    <li>Victor Gerkat Jois B</li>
-                    <li>Novri Andri</li>
-                    <li>Rovita Silaban</li>
-                    <li>M. Rizky Andrean</li>
-                    <li>Dimas Muhammad Hafidz</li>
-                    <li>Catur Basuki</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-              <div class="box w-100">
-                <div class="detail-box">
-                  <h5 class="font-weight-bold">Tim 8 : Regional Mario 2</h5>
-                  <ul style="padding-left: 0">
-                    <li>Nursinggih Dwi Avriliasto</li>
-                    <li>Yosua Eka Kurniawan</li>
-                    <li>Ano Rano</li>
-                    <li>Fajrin Ramadhan</li>
-                    <li>Balkis Sapto Budiyono</li>
-                    <li>Dedy Kurniawan</li>
-                    <li>Fadhil Rizaldi</li>
-                    <li>Eko Yulianto</li>
-                    <li>Zulny Fathur Adam</li>
-                    <li>Ahmad Syahroni</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-              <div class="box w-100">
-                <div class="detail-box">
-                  <h5 class="font-weight-bold">Tim 9 : HQ</h5>
-                  <ul style="padding-left: 0">
-                    <li>Arie Satrya Budianto</li>
-                    <li>Denny Stevano</li>
-                    <li>Regita Rahmanissa</li>
-                    <li>Sugi Mulyono</li>
-                    <li>Gilberto Erwanto</li>
-                    <li>Erni Ermawati</li>
-                    <li>Harry Kurniawan</li>
-                    <li>Christin Angelita</li>
-                    <li>Saraswati Nugraheni</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        </div> -->
       </div>
-    </section> -->
+    </section>
 
     <!-- footer section -->
     <footer class="footer_section">
