remove unused images; delete multiple image files and update image references in HTML for cleaner project structure

--- a/jadwal.html
+++ b/jadwal.html
@@ -114,6 +114,8 @@
             <span style="font-weight: bold">Program Latihan Perdana</span>
             | Minggu , 16 Februari 2025
           </h4>
+          <br />
+          <h6><span>Lokasi</span> : Lapangan Jambuluwuk</h6>
           <div class="row">
             <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
               <div class="box w-100">
