--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
                 2025
               </h1>
               <p style="text-transform: uppercase">
-                Latihan Perdana <br />16 Februari 2025 <br />di Lapangan
-                Jambuluwuk
+                Latihan Perdana <br />16 Februari 2025
               </p>
               <div class="btn-box text-center">
                 <a href="team.html" class="btn1 mr-1 mb-1"> TEAM </a>
