--- a/pelatih.html
+++ b/pelatih.html
@@ -119,7 +119,7 @@
                 <div class="col-md-12 col-lg-10 mx-auto">
                   <div class="box">
                     <div class="img-box col-md-6">
-                      <img src="images/herman.jpeg" alt="" />
+                      <img src="images/guntoro.jpeg" alt="" />
                     </div>
                     <div class="detail-box col-md-6">
                       <div class="name">
@@ -138,7 +138,7 @@
                 <div class="col-md-12 col-lg-10 mx-auto">
                   <div class="box">
                     <div class="img-box col-md-6">
-                      <img src="images/herman.jpeg" alt="" />
+                      <img src="images/rudy.jpeg" alt="" />
                     </div>
                     <div class="detail-box col-md-6">
                       <div class="name">
@@ -156,7 +156,7 @@
                 <div class="col-md-12 col-lg-10 mx-auto">
                   <div class="box">
                     <div class="img-box col-md-6">
-                      <img src="images/herman.jpeg" alt="" />
+                      <img src="images/rudy.jpeg" alt="" />
                     </div>
                     <div class="detail-box col-md-6">
                       <div class="name">
