update favicon and Open Graph image; restore favicon link and update Open Graph image meta tags for consistency

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Site Metas -->
-    <!-- <link rel="icon" href="images/logo.jpg" type="image/gif" /> -->
+    <link rel="icon" href="images/logo.jpg" type="image/gif" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
@@ -27,10 +27,10 @@
       property="og:url"
       content="https://basketputra-kotabatu.vercel.app/"
     />
-    <!-- <meta
+    <meta
       property="og:image"
       content="https://roda-link-cleopatra.vercel.app/images/logo.jpg"
-    /> -->
+    />
     <meta
       property="og:description"
       content="Latihan Perdana"
