--- a/jadwal.html
+++ b/jadwal.html
@@ -33,10 +33,10 @@
       property="og:url"
       content="https://basketputra-kotabatu.vercel.app/"
     />
-    <!-- <meta
+    <meta
       property="og:image"
       content="https://roda-link-cleopatra.vercel.app/images/logo.jpg"
-    /> -->
+    />
     <meta property="og:description" content="Latihan Perdana" />
 
     <!-- font awesome style -->
