update logo and meta tags; restore favicon link, update Open Graph image URLs, and adjust footer text for consistency

--- a/index.html
+++ b/index.html
@@ -29,12 +29,9 @@
     />
     <meta
       property="og:image"
-      content="https://roda-link-cleopatra.vercel.app/images/logo.jpg"
+      content="https://basketputra-kotabatu.vercel.app/images/logo.jpg"
     />
-    <meta
-      property="og:description"
-      content="Latihan Perdana"
-    />
+    <meta property="og:description" content="Latihan Perdana" />
 
     <!-- fonts style -->
     <link
@@ -56,8 +53,8 @@
       <header class="header_section long_section px-0">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="/">
-            <!-- <img src="images/logo2.png" style="width: 150px" alt="" /> -->
-            <span>BASKET PUTRA</span><span style="color: #ff6f00;">.</span>
+            <!-- <img src="images/logo.jpg" style="width: 150px" alt="" /> -->
+            <span>BASKET PUTRA</span><span style="color: #ff6f00">.</span>
           </a>
           <button
             class="navbar-toggler"
@@ -106,6 +103,11 @@
         <div class="row h-100 align-items-center">
           <div class="col-md-12">
             <div class="detail-box text-center">
+              <img
+                src="images/logo.jpg"
+                style="border-radius: 20px; width: 200px; margin-bottom: 20px"
+                alt=""
+              />
               <h1>
                 Tim <span style="color: #ff6f00">Basket</span> Putra Kota Batu
                 Porprov<br />
@@ -194,7 +196,7 @@
     <footer class="footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
+          &copy; <span id="displayYear"></span> Copyright |
           <a href="" style="color: #ff6f00">Perbasi Kota Batu</a>
         </p>
       </div>
