--- a/jadwal.html
+++ b/jadwal.html
@@ -10,7 +10,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Site Metas -->
-    <!-- <link rel="icon" href="images/logo.jpg" type="image/gif" /> -->
+    <link rel="icon" href="images/logo.jpg" type="image/gif" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
@@ -35,7 +35,7 @@
     />
     <meta
       property="og:image"
-      content="https://roda-link-cleopatra.vercel.app/images/logo.jpg"
+      content="https://basketputra-kotabatu.vercel.app/images/logo.jpg"
     />
     <meta property="og:description" content="Latihan Perdana" />
 
@@ -99,7 +99,10 @@
     </div>
 
     <!-- furniture section -->
-    <section class="team_section layout_padding">
+    <section
+      class="team_section layout_padding"
+      style="background: linear-gradient(10deg, #ff6f00 50%, #ffffff 50%)"
+    >
       <div class="container">
         <div class="heading_container">
           <h2 class="text-center">
@@ -108,7 +111,12 @@
         </div>
         <div
           class="team-container"
-          style="margin-top: 50px; border: 1px solid #1e88e5; padding: 20px"
+          style="
+            margin-top: 50px;
+            border: 1px solid #ff6f00;
+            padding: 20px;
+            background: white;
+          "
         >
           <h4>
             <span style="font-weight: bold">Program Latihan Perdana</span>
@@ -161,7 +169,7 @@
     <footer class="footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
+          &copy; <span id="displayYear"></span> Copyright |
           <a href="" style="color: #ff6f00">Perbasi Kota Batu</a>
         </p>
       </div>
