--- a/pelatih.html
+++ b/pelatih.html
@@ -10,7 +10,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Site Metas -->
-    <!-- <link rel="icon" href="images/logo.jpg" type="image/gif" /> -->
+    <link rel="icon" href="images/logo.jpg" type="image/gif" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
@@ -27,10 +27,10 @@
       property="og:url"
       content="https://basketputra-kotabatu.vercel.app/"
     />
-    <!-- <meta
+    <meta
       property="og:image"
-      content="https://roda-link-cleopatra.vercel.app/images/logo.jpg"
-    /> -->
+      content="https://basketputra-kotabatu.vercel.app/images/logo.jpg"
+    />
     <meta property="og:description" content="Latihan Perdana" />
 
     <!-- fonts style -->
@@ -100,7 +100,10 @@
 
     <!-- furniture section -->
 
-    <section class="client_section layout_padding">
+    <section
+      class="client_section layout_padding"
+      style="background: linear-gradient(10deg, #ff6f00 50%, #ffffff 50%)"
+    >
       <div class="container">
         <div class="heading_container">
           <h2 class="text-center">
@@ -117,7 +120,7 @@
             <div class="carousel-item active">
               <div class="row">
                 <div class="col-md-12 col-lg-10 mx-auto">
-                  <div class="box">
+                  <div class="box" style="background: white">
                     <div class="img-box col-md-6">
                       <img src="images/guntoro.jpeg" alt="" />
                     </div>
@@ -136,7 +139,7 @@
             <div class="carousel-item">
               <div class="row">
                 <div class="col-md-12 col-lg-10 mx-auto">
-                  <div class="box">
+                  <div class="box" style="background: white">
                     <div class="img-box col-md-6">
                       <img src="images/rudy.jpeg" alt="" />
                     </div>
@@ -154,7 +157,7 @@
             <div class="carousel-item">
               <div class="row">
                 <div class="col-md-12 col-lg-10 mx-auto">
-                  <div class="box">
+                  <div class="box" style="background: white">
                     <div class="img-box col-md-6">
                       <img src="images/rudy.jpeg" alt="" />
                     </div>
@@ -200,7 +203,7 @@
     <footer class="footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
+          &copy; <span id="displayYear"></span> Copyright |
           <a href="" style="color: #ff6f00">Perbasi Kota Batu</a>
         </p>
       </div>
