--- a/saluran.html
+++ b/saluran.html
@@ -10,7 +10,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Site Metas -->
-    <!-- <link rel="icon" href="images/logo.jpg" type="image/gif" /> -->
+    <link rel="icon" href="images/logo.jpg" type="image/gif" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
@@ -33,10 +33,10 @@
       property="og:url"
       content="https://basketputra-kotabatu.vercel.app/"
     />
-    <!-- <meta
+    <meta
       property="og:image"
-      content="https://roda-link-cleopatra.vercel.app/images/logo.jpg"
-    /> -->
+      content="https://basketputra-kotabatu.vercel.app/images/logo.jpg"
+    />
     <meta property="og:description" content="Latihan Perdana" />
 
     <!-- font awesome style -->
@@ -121,7 +121,7 @@
               </div>
               <div class="col-md-6">
                 <div class="detail-box">
-                  <p>Bergabung ke saluran Roda Link melalui Whatsapp</p>
+                  <p>Bergabung ke saluran Basket Putra melalui Whatsapp</p>
                   <a href="" class="btn1" target="_blank">
                     <i class="fa fa-whatsapp"></i> Gabung
                   </a>
@@ -139,7 +139,7 @@
     <footer class="footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
+          &copy; <span id="displayYear"></span> Copyright |
           <a href="" style="color: #ff6f00">Perbasi Kota Batu</a>
         </p>
       </div>
