--- a/kodiute.html
+++ b/kodiute.html
@@ -10,7 +10,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Site Metas -->
-    <!-- <link rel="icon" href="images/logo.jpg" type="image/gif" /> -->
+    <link rel="icon" href="images/logo.jpg" type="image/gif" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
@@ -33,10 +33,10 @@
       property="og:url"
       content="https://basketputra-kotabatu.vercel.app/"
     />
-    <!-- <meta
+    <meta
       property="og:image"
-      content="https://roda-link-cleopatra.vercel.app/images/logo.jpg"
-    /> -->
+      content="https://basketputra-kotabatu.vercel.app/images/logo.jpg"
+    />
     <meta property="og:description" content="Latihan Perdana" />
 
     <!-- font awesome style -->
@@ -143,7 +143,7 @@
     <footer class="footer_section">
       <div class="container">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
+          &copy; <span id="displayYear"></span> Copyright |
           <a href="" style="color: #ff6f00">Perbasi Kota Batu</a>
         </p>
       </div>
