--- a/kodiute.html
+++ b/kodiute.html
@@ -26,18 +26,31 @@
       rel="stylesheet"
     />
 
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Team Basket Putra - Batu" />
-    <meta property="og:type" content="website" />
     <meta
       property="og:url"
       content="https://basketputra-kotabatu.vercel.app/"
     />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Team Basket Putra - Batu" />
+    <meta property="og:description" content="Latihan Perdana" />
     <meta
       property="og:image"
       content="https://basketputra-kotabatu.vercel.app/images/logo.jpg"
     />
-    <meta property="og:description" content="Latihan Perdana" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="basketputra-kotabatu.vercel.app" />
+    <meta
+      property="twitter:url"
+      content="https://basketputra-kotabatu.vercel.app/"
+    />
+    <meta name="twitter:title" content="Team Basket Putra - Batu" />
+    <meta name="twitter:description" content="Latihan Perdana" />
+    <meta
+      name="twitter:image"
+      content="https://basketputra-kotabatu.vercel.app/images/logo.jpg"
+    />
 
     <!-- font awesome style -->
     <link href="css/font-awesome.min.css" rel="stylesheet" />
