--- a/pelatih.html
+++ b/pelatih.html
@@ -20,18 +20,31 @@
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Team Basket Putra - Batu" />
-    <meta property="og:type" content="website" />
     <meta
       property="og:url"
       content="https://basketputra-kotabatu.vercel.app/"
     />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Team Basket Putra - Batu" />
+    <meta property="og:description" content="Latihan Perdana" />
     <meta
       property="og:image"
       content="https://basketputra-kotabatu.vercel.app/images/logo.jpg"
     />
-    <meta property="og:description" content="Latihan Perdana" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="basketputra-kotabatu.vercel.app" />
+    <meta
+      property="twitter:url"
+      content="https://basketputra-kotabatu.vercel.app/"
+    />
+    <meta name="twitter:title" content="Team Basket Putra - Batu" />
+    <meta name="twitter:description" content="Latihan Perdana" />
+    <meta
+      name="twitter:image"
+      content="https://basketputra-kotabatu.vercel.app/images/logo.jpg"
+    />
 
     <!-- fonts style -->
     <link
