update slider section heading styles for better responsiveness and add class to hero text heading

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 style="border-radius: 20px; width: 200px; margin-bottom: 20px"
                 alt=""
               />
-              <h1>
+              <h1 class="hero-text-head">
                 Tim <span style="color: #ff6f00">Basket</span> Putra Kota Batu
                 Porprov<br />
                 2025
